# navigator

./: Cargo.toml  Readme.md  TODO.md  wrapper.sh
config/: config.toml
examples/: emojis.sh  files.sh
src/: .widgets.rs.swp  config.rs  logger.rs  main.rs  render.rs  widgets.rs
src/tests/: mod.rs
src/ui/: config.rs  mod.rs  parser.rs  render.rs  widgets.rs
src/util/: logger.rs  mod.rs
