[package]
name = "navigator"
version = "0.1.0"
authors = ["Finn Hediger <finn.hediger@thurweb.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9.3"
termion = "1.5.5"
clap = "2.33.1"

toml = "0.5.3"
serde = "1.0.114"
serde_derive = "1.0.114"
